MultiPodDermo/Frontend/manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: umbdemofrontend 
spec:
  replicas: 5
  selector:
    matchLabels:
      app: umbdemofrontend
  template:
    metadata:
      labels:
        app: umbdemofrontend 
    spec:
      containers:
        - name: umbdemofrontend 
          image: acrdemoeuw9986.azurecr.io/multipod/frontend:latest
          resources:
            limits:
              cpu: "50m"
              memory: "64Mi"
          ports:
          - containerPort: 80
