MultiPodDermo/Frontend/manifests/service-int.yml
apiVersion: v1
kind: Service
metadata:
    name: frontendserviceint
spec:
    ports:
    - port: 80 
      targetPort: 5000
    selector:
        app: umbdemofrontend
