MultiPodDermo/Frontend/manifests/service-internal.yml
apiVersion: v1
kind: Service
metadata:
    name: frontendserviceint
    annotations:
     service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: 5000
    selector:
        app: umbdemofrontend
