MultiPodDermo/Frontend/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: umbdemofrontend
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: frontendserviceint
          servicePort: 80
      - path: /backend
        backend:
          serviceName: serviceapi
          servicePort: 80
